# google-ads-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MISSING_SERVICES.md  README.md  TRACKER.md  dev.py  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: FEATURE_PARITY.md
refs/: fastmcp.llms.txt  googleads.llms.txt
scripts/: keyword_planner_live.py  typecheck.sh
src/: sdk_client.py  utils.py
src/sdk_servers/: __init__.py  account_budget_proposal_server.py  account_link_server.py  ad_group_ad_label_server.py  ad_group_ad_server.py  ad_group_asset_server.py  ad_group_asset_set_server.py  ad_group_bid_modifier_server.py  ad_group_criterion_customizer_server.py  ad_group_criterion_label_server.py  ad_group_criterion_server.py  ad_group_customizer_server.py  ad_group_label_server.py  ad_group_server.py  ad_parameter_server.py  ad_server.py  asset_group_asset_server.py  asset_group_server.py  asset_group_signal_server.py  asset_server.py  asset_set_server.py  audience_insights_server.py  audience_server.py  batch_job_server.py  bidding_data_exclusion_server.py  bidding_seasonality_adjustment_server.py  bidding_strategy_server.py  billing_setup_server.py  brand_suggestion_server.py  budget_server.py  campaign_asset_server.py  campaign_asset_set_server.py  (+56 more)
tests/: conftest.py  google_ads_test_utils.py  test_account_budget_proposal_service.py  test_account_link_service.py  test_ad_group_ad_service.py  test_ad_group_asset_service.py  test_ad_group_bid_modifier_service.py  test_ad_group_criterion_customizer_service.py  test_ad_group_criterion_label_service.py  test_ad_group_criterion_service.py  test_ad_group_customizer_service.py  test_ad_group_label_service.py  test_ad_group_service.py  test_ad_parameter_service.py  test_ad_service.py  test_asset_group_asset_service.py  test_asset_group_service.py  test_asset_group_signal_service.py  test_asset_service.py  test_asset_set_service.py  test_audience_insights_service.py  test_audience_service.py  test_batch_job_service.py  test_bidding_data_exclusion_service.py  test_bidding_strategy_service.py  test_billing_setup_service.py  test_brand_suggestion_service.py  test_budget_service.py  test_campaign_asset_service.py  test_campaign_asset_set_service.py  test_campaign_bid_modifier_service.py  test_campaign_conversion_goal_service.py  test_campaign_criterion_service.py  test_campaign_customizer_service.py  test_campaign_draft_service.py  test_campaign_label_service.py  test_campaign_service.py  test_campaign_shared_set_service.py  test_conversion_custom_variable_service.py  test_conversion_goal_campaign_config_service.py  (+35 more)
(+268 files in other folders)
